--- a/css/index.css
+++ b/css/index.css
@@ -47,4 +47,21 @@ article,
 footer {
   display: block;
 }
+
+body {
+  width: 100vw;
+  background: url(../images/background.png) no-repeat;
+}
+
+body header .he {
+  width: 50%;
+  padding: 13%;
+  margin: 0 auto;
+}
+
+body header .he:before {
+  content: "";
+  background: url(../images/brightly.png) no-repeat center;
+  background-size: 500px;
+}
 /*# sourceMappingURL=index.css.map */
