--- a/scss/index.scss
+++ b/scss/index.scss
@@ -3,19 +3,197 @@
 @import "mixin.scss";
 
 body {
-    width: 100vw;
-    background: url(../images/background.png) no-repeat;
+    width: 100%;
+    height: 100vh;
+    background: url(../images/background_mo.png) no-repeat;
+    background-size: 100%;
+
+    @include responsive(tablet-size) {
+        background: url(../images/background.png) no-repeat;
+        background-size: 100%;
+    }
 
     header {
-        .he {
-            width: 50%;
-            padding: 13%;
-            margin: 0 auto;
+        width: 100%;
+        height: 100vh;
+        position: relative;
 
-            &:before {
+        img {
+            width: 30%;
+        }
+
+        .planet_1 {
+            position: absolute;
+            top: 17%;
+            left: 15%;
+            width: 18%;
+        }
+
+        .planet_2 {
+            position: absolute;
+            top: -3%;
+            right: -13%;
+            width: 45%;
+        }
+
+        .spaceship_flex {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 40%;
+    
+            transform: translate(-50%, -50%);
+
+            &::before, &::after {
+                position: absolute;
                 content: "";
-                background: url(../images/brightly.png) no-repeat center;
-                background-size: 500px;
+                top: 50%;
+                left: 50%;
+                width: 50%;
+                height: 50%;
+                border-radius: 50%;
+                filter: blur(60px);
+
+                transform: translate(-50%, -50%);
+            }
+
+            &::after {
+                background: white;
+                z-index: -1;
+                animation: backglow2 15s ease infinite;
+            }
+
+            &::before {
+                background: white;
+                z-index: -1;
+                animation: backglow1 15s ease infinite;
+            }
+
+            .spaceship{
+                width: 100%;
+            }
+        }
+
+
+        .planet_3 {
+            position: absolute;
+            top: 65%;
+            left: 68%;
+            width: 25%;
+        }
+
+        .planet_4 {
+            position: absolute;
+            top: 81%;
+            left: 18%;
+            width: 12%;
+        }
+    }
+
+    main {
+        .hello {
+            width: 100%;
+            height: 100vh;
+            position: relative;
+
+            &::before {
+                position: absolute;
+                content: "";
+                top: 8%;
+                left: 50%;
+                width: 18%;
+                height: 18%;
+                border-radius: 50%;
+                filter: blur(60px);
+                background: white;
+                z-index: -1;
+
+                transform: translate(-50%, -50%);
+            }
+
+            .hello_img {
+                position: relative;
+                width: 45%;
+                margin: auto;
+                margin-bottom: 25px;
+
+                img{
+                    width: 100%;
+                }
+
+                .hover {
+                    display: none;
+                    .frame {
+                        z-index: -1;
+                    }
+                    img {
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        z-index: -2;
+                        width: 90%;
+                        border-radius: 50%;
+
+                        transform: translate(-50%, -50%);
+                    }
+                }
+            }
+
+            .hello_text {
+                text-align: center;
+                color: $font-color;
+
+                h1 {
+                    font: {
+                        size: 3em;
+                        weight: 700;
+                    }
+                }
+                
+                h2 {
+                    font: {
+                        size: 1.6em;
+                        weight: 700;
+                    }
+                    margin-bottom: 15px;
+                }
+
+                p {
+                    font: {
+                        size: 1em;
+                        weight: 500;
+                    }
+                    margin-bottom: 18px;
+                }
+
+                
+                .pr_list,
+                .history_list {
+                    display: none;
+                    
+                    font: {
+                        size: 0.9em;
+                        weight: 500;
+                    }
+                    letter-spacing: 0.05em;
+                    line-height: 22px;
+                    margin-bottom: 15px;
+                    list-style: square inside url("../svg/star.svg");
+                }
+                .view {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+    
+                    img {
+                        display: inline;
+                        width: 5%;
+                    }
+                    
+                    span {
+                        margin: 0 10px;
+                    }
+                }
             }
         }
     }
