--- a/scss/index.scss
+++ b/scss/index.scss
@@ -196,5 +196,146 @@ body {
                 }
             }
         }
+
+        .skill {
+            position: relative;
+            width: 100%;
+            height: 100vh;
+            background-color: rgba(0, 255, 255, 0.5);
+
+            .skill_img {
+                width: 100%;
+
+                .html_css {
+                    position: absolute;
+                    top: 13%;
+                    right: 50%;
+                    width: 22%;
+                }
+
+                .adobe {
+                    position: absolute;
+                    top: 46%;
+                    right: 40%;
+                    width: 22%;
+                }
+
+                .js {
+                    position: absolute;
+                    top: 80%;
+                    right: 28%;
+                    width: 22%;
+                }
+            }
+
+            .center {
+                display: none;
+            }
+
+            .circle_svg {
+                width: 100%;
+
+                .circle1 {
+                    position: absolute;
+                    bottom: 0;
+                    right: 0;
+                    width: 100%;
+                    height: 100%;
+                    z-index: -1;
+                }
+
+                .circle2 {
+                    position: absolute;
+                    bottom: 0;
+                    right: 0;
+                    width: 90%;
+                    height: 90%;
+                    z-index: -1;
+                }
+
+                .circle3 {
+                    position: absolute;
+                    bottom: 0;
+                    right: 0;
+                    width: 60%;
+                    height: 60%;
+                    z-index: -1;
+                }
+            }
+        }
+
+        .popol {
+            width: 100%;
+            height: 100vh;
+
+            a {
+                margin-top: 50px;
+
+                img {
+                    margin: auto;
+                    width: 38%;
+                }
+            }
+        }
+
+        .etc {
+            position: relative;
+            width: 100%;
+            height: 100vh;
+            background: url(../images/stone_mo.png) no-repeat center;
+            background-size: 90%;
+
+            .clipPath {
+                svg {
+                    &:first-child {
+                        position: absolute;
+                        top: 10%;
+                        left: 11%;
+                    }
+
+                    &:nth-child(2) {
+                        position: absolute;
+                        top: 12%;
+                        left: 55%;
+                    }
+
+                    &:nth-child(3) {
+                        position: absolute;
+                        top: 23%;
+                        left: 15%;
+                    }
+
+                    &:nth-child(4) {
+                        position: absolute;
+                        top: 35%;
+                        left: 50%;
+                    }
+
+                    &:nth-child(5) {
+                        position: absolute;
+                        top: 40%;
+                        left: 16%;
+                    }
+
+                    &:nth-child(6) {
+                        position: absolute;
+                        top: 50%;
+                        left: 60%;
+                    }
+
+                    &:nth-child(7) {
+                        position: absolute;
+                        top: 60%;
+                        left: 20%;
+                    }
+
+                    &:last-child {
+                        position: absolute;
+                        top: 60%;
+                        left: 80%;
+                    }
+                }
+            }
+        }
     }
 }
