--- a/css/index.css
+++ b/css/index.css
@@ -50,15 +50,14 @@ footer {
 
 body {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background: url(../images/background_mo.png) no-repeat;
-  background-size: 100%;
+  background-size: 100% 100%;
 }
 
 @media screen and (min-width: 768px) {
   body {
     background: url(../images/background.png) no-repeat;
-    background-size: 100%;
   }
 }
 
@@ -150,7 +149,7 @@ body main .hello {
 body main .hello::before {
   position: absolute;
   content: "";
-  top: 8%;
+  top: 10%;
   left: 50%;
   width: 18%;
   height: 18%;
@@ -251,7 +250,8 @@ body main .skill {
   position: relative;
   width: 100%;
   height: 100vh;
-  background-color: rgba(0, 255, 255, 0.5);
+  background-color: #1f0b47;
+  z-index: -1;
 }
 
 body main .skill .skill_img {
@@ -344,43 +344,84 @@ body main .etc .clipPath svg:first-child {
 
 body main .etc .clipPath svg:nth-child(2) {
   position: absolute;
-  top: 12%;
-  left: 55%;
+  top: 13%;
+  left: 54%;
 }
 
 body main .etc .clipPath svg:nth-child(3) {
   position: absolute;
-  top: 23%;
-  left: 15%;
+  top: 28%;
+  left: 32%;
 }
 
 body main .etc .clipPath svg:nth-child(4) {
   position: absolute;
   top: 35%;
-  left: 50%;
+  left: 68%;
 }
 
 body main .etc .clipPath svg:nth-child(5) {
   position: absolute;
-  top: 40%;
-  left: 16%;
+  top: 47%;
+  left: 24%;
 }
 
 body main .etc .clipPath svg:nth-child(6) {
   position: absolute;
-  top: 50%;
-  left: 60%;
+  top: 58%;
+  left: 53%;
 }
 
 body main .etc .clipPath svg:nth-child(7) {
   position: absolute;
-  top: 60%;
-  left: 20%;
+  top: 67%;
+  left: 10%;
 }
 
 body main .etc .clipPath svg:last-child {
   position: absolute;
-  top: 60%;
-  left: 80%;
+  top: 72%;
+  left: 61%;
+}
+
+body footer {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  text-align: center;
+  padding-top: 50%;
+  background-color: rgba(255, 99, 71, 0.5);
+  background: url(../images/planet_fo.png) no-repeat right bottom;
+  background-size: 95%;
+}
+
+body footer h2 {
+  font-size: 1.6em;
+  font-weight: 700;
+  color: #fff8fc;
+  margin-bottom: 15px;
+}
+
+body footer p {
+  font-size: 1em;
+  font-weight: 500;
+  color: #fff8fc;
+  margin-bottom: 18px;
+}
+
+body footer .copyright {
+  position: absolute;
+  bottom: 0%;
+  left: 50%;
+  width: 150%;
+  background-color: rgba(0, 255, 255, 0.5);
+}
+
+body footer .copyright img {
+  width: 100%;
+  position: absolute;
+  bottom: 0%;
+  left: 50%;
+  margin-left: -100%;
 }
 /*# sourceMappingURL=index.css.map */
