--- a/scss/index.scss
+++ b/scss/index.scss
@@ -4,13 +4,12 @@
 
 body {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: url(../images/background_mo.png) no-repeat;
-    background-size: 100%;
+    background-size: 100% 100%;
 
     @include responsive(tablet-size) {
         background: url(../images/background.png) no-repeat;
-        background-size: 100%;
     }
 
     header {
@@ -99,7 +98,7 @@ body {
             &::before {
                 position: absolute;
                 content: "";
-                top: 8%;
+                top: 10%;
                 left: 50%;
                 width: 18%;
                 height: 18%;
@@ -201,7 +200,8 @@ body {
             position: relative;
             width: 100%;
             height: 100vh;
-            background-color: rgba(0, 255, 255, 0.5);
+            background-color: #1f0b47;
+            z-index: -1;
 
             .skill_img {
                 width: 100%;
@@ -295,46 +295,91 @@ body {
 
                     &:nth-child(2) {
                         position: absolute;
-                        top: 12%;
-                        left: 55%;
+                        top: 13%;
+                        left: 54%;
                     }
 
                     &:nth-child(3) {
                         position: absolute;
-                        top: 23%;
-                        left: 15%;
+                        top: 28%;
+                        left: 32%;
                     }
 
                     &:nth-child(4) {
                         position: absolute;
                         top: 35%;
-                        left: 50%;
+                        left: 68%;
                     }
 
                     &:nth-child(5) {
                         position: absolute;
-                        top: 40%;
-                        left: 16%;
+                        top: 47%;
+                        left: 24%;
                     }
 
                     &:nth-child(6) {
                         position: absolute;
-                        top: 50%;
-                        left: 60%;
+                        top: 58%;
+                        left: 53%;
                     }
 
                     &:nth-child(7) {
                         position: absolute;
-                        top: 60%;
-                        left: 20%;
+                        top: 67%;
+                        left: 10%;
                     }
 
                     &:last-child {
                         position: absolute;
-                        top: 60%;
-                        left: 80%;
+                        top: 72%;
+                        left: 61%;
                     }
                 }
+            }
+        }
+    }
+
+    footer{
+        position: relative;
+        width: 100%;
+        height: 100vh;
+        text-align: center;
+        padding-top: 50%;
+        background-color: rgba(255, 99, 71, 0.5);
+        background: url(../images/planet_fo.png) no-repeat right bottom;
+        background-size: 95%;
+
+        h2 {
+            font: {
+                size: 1.6em;
+                weight: 700;
+            }
+            color: $font-color;
+            margin-bottom: 15px;
+        }
+
+        p {
+            font: {
+                size: 1em;
+                weight: 500;
+            }
+            color: $font-color;
+            margin-bottom: 18px;
+        }
+
+        .copyright {
+            position: absolute;
+            bottom: 0%;
+            left: 50%;
+            width: 150%;
+            background-color: rgba(0, 255, 255, 0.5);
+            
+            img {
+                width: 100%;
+                position: absolute;
+                bottom: 0%;
+                left: 50%;
+                margin-left: -100%;
             }
         }
     }
