--- a/css/index.css
+++ b/css/index.css
@@ -50,7 +50,6 @@ footer {
 
 body {
   width: 100%;
-  height: 100%;
   background: url(../images/background_mo.png) no-repeat;
   background-size: 100% 100%;
 }
@@ -127,8 +126,9 @@ body .star {
 body header {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 1080px;
   overflow: hidden;
+  background-color: teal;
 }
 
 body header .planet_1 {
@@ -563,7 +563,8 @@ body header .planet_4 {
 body main .hello {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 1080px;
+  background-color: teal;
 }
 
 body main .hello .wrapper {
@@ -586,6 +587,7 @@ body main .hello .wrapper {
     display: flex;
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
+    margin-top: 50%;
   }
 }
 
