--- a/scss/index.scss
+++ b/scss/index.scss
@@ -4,7 +4,6 @@
 
 body {
     width: 100%;
-    height: 100%;
     background: url(../images/background_mo.png) no-repeat;
     background-size: 100% 100%;
 
@@ -45,8 +44,9 @@ body {
     header {
         position: relative;
         width: 100%;
-        height: 100vh;
+        height: 1080px;
         overflow: hidden;
+        background-color: teal;
 
         .planet_1 {
             position: absolute;
@@ -311,19 +311,21 @@ body {
     }
 
     main {
-        
         .hello {
             position: relative;
             width: 100%;
-            height: 100vh;
+            height: 1080px;
+        background-color: teal;
+
             
             .wrapper {
                 @include wrapper;
-    
+
                 @include responsive(pc-size) {
                     @include wrapper;
                     display: flex;
                     flex-wrap: nowrap;
+                    margin-top: 50%;
                 }
 
                 .hello_img {
